--- a/src/components/Sidebar/index.module.scss
+++ b/src/components/Sidebar/index.module.scss
@@ -7,8 +7,8 @@
 	display: flex;
 	flex-direction: column;
 
-	padding: 1rem; /* sidebar internal spacing */
-	gap: 1rem;
+	padding: 1rem 1rem; /* sidebar internal spacing */
+	gap: 2.8rem;
 	background-color: #2f3137;
 	min-height: 100vh;
 }
